# CCPGP

./: README.md
ccpgp-repo/: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
ccpgp-repo/ccpgp/: __init__.py  core.py  hetero.py
ccpgp-repo/docs/: ARCHITECTURE.md
ccpgp-repo/examples/: heterogeneous_network.py  identity_divergence.py  quickstart.py
ccpgp-repo/tests/: test_all.py
